Lower minimum JDK requirement from 21 to 17
- Change jdk.version from 21 to 17 in root pom.xml
- Create JDK 17 fallback for CamelThreadFactory using new Thread()
- Move JDK 21 CamelThreadFactory (virtual threads) to MRJAR java21/ directory
- Replace List.getLast() (JDK 21) with index-based access in JsonObject
- Replace String.splitWithDelimiters() (JDK 21) with Pattern/Matcher in JsonObject
- Add @EnabledForJreRange(min=JAVA_21) to ManagedVirtualThreadExecutorTest

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>